k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeseal-web
spec:
  selector:
    matchLabels:
      app: kubeseal-web
  template:
    metadata:
      labels:
        app: kubeseal-web
    spec:
      imagePullPolicy: Always
      containers:
      - name: kubeseal-web
        image: quay.io/thikade/kubeseal-web:v1.1.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 3
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true        
      volumes:
      - name: config
        configMap:
          name: kubeseal-config
