k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeseal-web
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: kubeseal-web
