k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubeseal-web
spec:
  subdomain: kubeseal-web
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kubeseal-web
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
